objects/Account.object
<CustomObject>
    <fields>
        <fullName>AA_Field__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <defaultValue>true</defaultValue>
        <label>AA_Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADR_is_active__c</fullName>
        <formula>ADR__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADR_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_Formula_Field__c</fullName>
        <description>A test formula field</description>
        <formula>200*(Complete_Cost__c)/10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No help here. This is a formula field.</inlineHelpText>
        <label>A Formula Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_Long_Number__c</fullName>
        <label>A Long Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Flag__c</fullName>
        <description>custom field description test</description>
        <inlineHelpText>custom field help text test</inlineHelpText>
        <label>Account Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualITBudget__c</fullName>
        <complianceGroup>HIPAA;GDPR;COPPA</complianceGroup>
        <description>This information needs to be limited to executive team and VP level Salespeople.</description>
        <inlineHelpText>This is confidential information about the account&apos;s IT budget.</inlineHelpText>
        <label>Annual IT Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Complete_Cost__c</fullName>
        <complianceGroup>COPPA</complianceGroup>
        <label>Complete Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CorporateDesktopHWStandard__c</fullName>
        <label>Corporate Desktop HW Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Compaq</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorporateDesktopOSStandard__c</fullName>
        <label>Corporate Desktop OS Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 98</fullName>
                </value>
                <value>
                    <fullName>Windows 2000</fullName>
                </value>
                <value>
                    <fullName>Windows XP</fullName>
                </value>
                <value>
                    <fullName>Mac OS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Windows 95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryDataCenterLocation__c</fullName>
        <label>Primary Data Center Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryERPSystem__c</fullName>
        <label>Primary ERP System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quickbooks_Id__c</fullName>
        <description>Account.Quickbooks_Id__c matches with Customer.Id
If this field is empty, match Account.Name with Customer.Name</description>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceProgramStatus__c</fullName>
        <label>Reference Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Top Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPotentialLicenses__c</fullName>
        <label>Total Potential Licenses</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa_external_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>metazoa_external_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ofsalesreps__c</fullName>
        <label>Actual Reps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>richtext1__c</fullName>
        <label>richtext1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>testme__c</fullName>
        <label>testme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Rec_Type1</fullName>
        <active>true</active>
        <label>Account Rec Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Rec_Type2</fullName>
        <active>true</active>
        <label>Account Rec Type2</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>